packagelon com.twittelonr.homelon_mixelonr.util.elonarlybird

import com.twittelonr.selonarch.common.schelonma.elonarlybird.elonarlybirdFielonldConstants.elonarlybirdFielonldConstant
import com.twittelonr.selonarch.common.ranking.{thriftscala => scr}
import com.twittelonr.selonarch.elonarlybird.{thriftscala => elonb}

objelonct RelonlelonvancelonSelonarchUtil {

  val Melonntions: String = elonarlybirdFielonldConstant.MelonNTIONS_FACelonT
  val Hashtags: String = elonarlybirdFielonldConstant.HASHTAGS_FACelonT
  val FacelontsToFelontch: Selonq[String] = Selonq(Melonntions, Hashtags)

  privatelon val RankingParams: scr.ThriftRankingParams = {
    scr.ThriftRankingParams(
      `typelon` = Somelon(scr.ThriftScoringFunctionTypelon.TelonnsorflowBaselond),
      selonlelonctelondTelonnsorflowModelonl = Somelon("timelonlinelons_relonctwelonelont_relonplica"),
      minScorelon = -1.0elon100,
      relontwelonelontCountParams = Somelon(scr.ThriftLinelonarFelonaturelonRankingParams(welonight = 20.0)),
      relonplyCountParams = Somelon(scr.ThriftLinelonarFelonaturelonRankingParams(welonight = 1.0)),
      relonputationParams = Somelon(scr.ThriftLinelonarFelonaturelonRankingParams(welonight = 0.2)),
      lucelonnelonScorelonParams = Somelon(scr.ThriftLinelonarFelonaturelonRankingParams(welonight = 2.0)),
      telonxtScorelonParams = Somelon(scr.ThriftLinelonarFelonaturelonRankingParams(welonight = 0.18)),
      urlParams = Somelon(scr.ThriftLinelonarFelonaturelonRankingParams(welonight = 2.0)),
      isRelonplyParams = Somelon(scr.ThriftLinelonarFelonaturelonRankingParams(welonight = 1.0)),
      favCountParams = Somelon(scr.ThriftLinelonarFelonaturelonRankingParams(welonight = 30.0)),
      langelonnglishUIBoost = 0.5,
      langelonnglishTwelonelontBoost = 0.2,
      langDelonfaultBoost = 0.02,
      unknownLanguagelonBoost = 0.05,
      offelonnsivelonBoost = 0.1,
      inTrustelondCirclelonBoost = 3.0,
      multiplelonHashtagsOrTrelonndsBoost = 0.6,
      inDirelonctFollowBoost = 4.0,
      twelonelontHasTrelonndBoost = 1.1,
      selonlfTwelonelontBoost = 2.0,
      twelonelontHasImagelonUrlBoost = 2.0,
      twelonelontHasVidelonoUrlBoost = 2.0,
      uselonUselonrLanguagelonInfo = truelon,
      agelonDeloncayParams = Somelon(scr.ThriftAgelonDeloncayRankingParams(slopelon = 0.005, baselon = 1.0)),
      selonlelonctelondModelonls = Somelon(Map("homelon_mixelonr_unifielond_elonngagelonmelonnt_prod" -> 1.0)),
      applyBoosts = falselon,
    )
  }

  val MelontadataOptions: elonb.ThriftSelonarchRelonsultMelontadataOptions = {
    elonb.ThriftSelonarchRelonsultMelontadataOptions(
      gelontTwelonelontUrls = truelon,
      gelontRelonsultLocation = falselon,
      gelontLucelonnelonScorelon = falselon,
      gelontInRelonplyToStatusId = truelon,
      gelontRelonfelonrelonncelondTwelonelontAuthorId = truelon,
      gelontMelondiaBits = truelon,
      gelontAllFelonaturelons = truelon,
      relonturnSelonarchRelonsultFelonaturelons = truelon,
      // Selont gelontelonxclusivelonConvelonrsationAuthorId in ordelonr to relontrielonvelon elonxclusivelon / SupelonrFollow twelonelonts.
      gelontelonxclusivelonConvelonrsationAuthorId = truelon
    )
  }

  val RelonlelonvancelonOptions: elonb.ThriftSelonarchRelonlelonvancelonOptions = {
    elonb.ThriftSelonarchRelonlelonvancelonOptions(
      proximityScoring = truelon,
      maxConseloncutivelonSamelonUselonr = Somelon(2),
      rankingParams = Somelon(RankingParams),
      maxHitsToProcelonss = Somelon(500),
      maxUselonrBlelonndCount = Somelon(3),
      proximityPhraselonWelonight = 9.0,
      relonturnAllRelonsults = Somelon(truelon)
    )
  }
}
