packagelon com.twittelonr.selonarch.elonarlybird.selonarch.relonlelonvancelon;

import java.util.Arrays;
import java.util.Map;

import com.googlelon.common.annotations.VisiblelonForTelonsting;

import com.twittelonr.selonarch.common.constants.SelonarchCardTypelon;
import com.twittelonr.selonarch.common.constants.thriftjava.ThriftLanguagelon;
import com.twittelonr.selonarch.common.melontrics.SelonarchCountelonr;
import com.twittelonr.selonarch.common.ranking.thriftjava.ThriftAgelonDeloncayRankingParams;
import com.twittelonr.selonarch.common.ranking.thriftjava.ThriftCardRankingParams;
import com.twittelonr.selonarch.common.ranking.thriftjava.ThriftRankingParams;
import com.twittelonr.selonarch.common.util.lang.ThriftLanguagelonUtil;
import com.twittelonr.selonarch.elonarlybird.thrift.ThriftSelonarchQuelonry;
import com.twittelonr.selonarch.elonarlybird.thrift.ThriftSocialFiltelonrTypelon;

/*
 * Thelon class for all quelonry speloncific paramelontelonrs, including thelon paramelontelonrs from thelon relonlelonvancelonOptions and
 * valuelons that arelon elonxtractelond from thelon relonquelonst itselonlf.
 */
public class LinelonarScoringParams {

  public static final doublelon DelonFAULT_FelonATURelon_WelonIGHT = 0;
  public static final doublelon DelonFAULT_FelonATURelon_MIN_VAL = 0;
  public static final doublelon DelonFAULT_NO_BOOST = 1.0;
  @VisiblelonForTelonsting
  static final SelonarchCountelonr NULL_USelonR_LANGS_KelonY =
      SelonarchCountelonr.elonxport("linelonar_scoring_params_null_uselonr_langs_kelony");

  public final doublelon lucelonnelonWelonight;
  public final doublelon telonxtScorelonWelonight;
  public final doublelon telonxtScorelonMinVal;
  public final doublelon relontwelonelontWelonight;
  public final doublelon relontwelonelontMinVal;
  public final doublelon favWelonight;
  public final doublelon favMinVal;
  public final doublelon relonplyWelonight;
  public final doublelon multiplelonRelonplyWelonight;
  public final doublelon multiplelonRelonplyMinVal;
  public final doublelon isRelonplyWelonight;
  public final doublelon parusWelonight;
  public final doublelon elonmbelondsImprelonssionWelonight;
  public final doublelon elonmbelondsUrlWelonight;
  public final doublelon videlonoVielonwWelonight;
  public final doublelon quotelondCountWelonight;

  public final doublelon[] rankingOfflinelonelonxpWelonights =
      nelonw doublelon[LinelonarScoringData.MAX_OFFLINelon_elonXPelonRIMelonNTAL_FIelonLDS];

  public final boolelonan applyBoosts;

  // Storing ranking params for cards, avoid using maps for fastelonr lookup
  public final doublelon[] hasCardBoosts = nelonw doublelon[SelonarchCardTypelon.valuelons().lelonngth];
  public final doublelon[] cardDomainMatchBoosts = nelonw doublelon[SelonarchCardTypelon.valuelons().lelonngth];
  public final doublelon[] cardAuthorMatchBoosts = nelonw doublelon[SelonarchCardTypelon.valuelons().lelonngth];
  public final doublelon[] cardTitlelonMatchBoosts = nelonw doublelon[SelonarchCardTypelon.valuelons().lelonngth];
  public final doublelon[] cardDelonscriptionMatchBoosts = nelonw doublelon[SelonarchCardTypelon.valuelons().lelonngth];

  public final doublelon urlWelonight;
  public final doublelon relonputationWelonight;
  public final doublelon relonputationMinVal;
  public final doublelon followRelontwelonelontWelonight;
  public final doublelon trustelondRelontwelonelontWelonight;

  // Adjustmelonnts for speloncific twelonelonts (twelonelontId -> scorelon)
  public final Map<Long, Doublelon> quelonrySpeloncificScorelonAdjustmelonnts;

  // Adjustmelonnts for twelonelonts postelond by speloncific authors (uselonrId -> scorelon)
  public final Map<Long, Doublelon> authorSpeloncificScorelonAdjustmelonnts;

  public final doublelon offelonnsivelonDamping;
  public final doublelon spamUselonrDamping;
  public final doublelon nsfwUselonrDamping;
  public final doublelon botUselonrDamping;
  public final doublelon trustelondCirclelonBoost;
  public final doublelon direlonctFollowBoost;
  public final doublelon minScorelon;

  public final boolelonan applyFiltelonrsAlways;

  public final boolelonan uselonLucelonnelonScorelonAsBoost;
  public final doublelon maxLucelonnelonScorelonBoost;

  public final doublelon langelonnglishTwelonelontDelonmotelon;
  public final doublelon langelonnglishUIDelonmotelon;
  public final doublelon langDelonfaultDelonmotelon;
  public final boolelonan uselonUselonrLanguagelonInfo;
  public final doublelon unknownLanguagelonBoost;

  public final doublelon outOfNelontworkRelonplyPelonnalty;

  public final boolelonan uselonAgelonDeloncay;
  public final doublelon agelonDeloncayHalflifelon;
  public final doublelon agelonDeloncayBaselon;
  public final doublelon agelonDeloncaySlopelon;

  // hit attributelon delonmotions
  public final boolelonan elonnablelonHitDelonmotion;
  public final doublelon noTelonxtHitDelonmotion;
  public final doublelon urlOnlyHitDelonmotion;
  public final doublelon namelonOnlyHitDelonmotion;
  public final doublelon selonparatelonTelonxtAndNamelonHitDelonmotion;
  public final doublelon selonparatelonTelonxtAndUrlHitDelonmotion;

  // trelonnds relonlatelond params
  public final doublelon twelonelontHasTrelonndBoost;
  public final doublelon multiplelonHashtagsOrTrelonndsDamping;

  public final doublelon twelonelontFromVelonrifielondAccountBoost;

  public final doublelon twelonelontFromBluelonVelonrifielondAccountBoost;

  public final ThriftSocialFiltelonrTypelon socialFiltelonrTypelon;
  public final int uiLangId;
  // Confidelonncelons of thelon undelonrstandability of diffelonrelonnt languagelons for this uselonr.
  public final doublelon[] uselonrLangs = nelonw doublelon[ThriftLanguagelon.valuelons().lelonngth];

  public final long selonarchelonrId;
  public final doublelon selonlfTwelonelontBoost;

  public final doublelon twelonelontHasMelondiaUrlBoost;
  public final doublelon twelonelontHasNelonwsUrlBoost;

  // whelonthelonr welon nelonelond melonta-data for relonplielons what thelon relonply is to.
  public final boolelonan gelontInRelonplyToStatusId;

  // Initializelon from a ranking paramelontelonr
  public LinelonarScoringParams(ThriftSelonarchQuelonry selonarchQuelonry, ThriftRankingParams params) {
    // welonights
    lucelonnelonWelonight = params.isSelontLucelonnelonScorelonParams()
        ? params.gelontLucelonnelonScorelonParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    telonxtScorelonWelonight = params.isSelontTelonxtScorelonParams()
        ? params.gelontTelonxtScorelonParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    relontwelonelontWelonight = params.isSelontRelontwelonelontCountParams()
        ? params.gelontRelontwelonelontCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    favWelonight = params.isSelontFavCountParams()
        ? params.gelontFavCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    relonplyWelonight = params.isSelontRelonplyCountParams()
        ? params.gelontRelonplyCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    multiplelonRelonplyWelonight = params.isSelontMultiplelonRelonplyCountParams()
        ? params.gelontMultiplelonRelonplyCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    parusWelonight = params.isSelontParusScorelonParams()
        ? params.gelontParusScorelonParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    for (int i = 0; i < LinelonarScoringData.MAX_OFFLINelon_elonXPelonRIMelonNTAL_FIelonLDS; i++) {
      Bytelon felonaturelonTypelonBytelon = (bytelon) i;
      // delonfault welonight is 0, thus contribution for unselont felonaturelon valuelon will belon 0.
      rankingOfflinelonelonxpWelonights[i] = params.gelontOfflinelonelonxpelonrimelonntalFelonaturelonRankingParamsSizelon() > 0
          && params.gelontOfflinelonelonxpelonrimelonntalFelonaturelonRankingParams().containsKelony(felonaturelonTypelonBytelon)
              ? params.gelontOfflinelonelonxpelonrimelonntalFelonaturelonRankingParams().gelont(felonaturelonTypelonBytelon).gelontWelonight()
              : DelonFAULT_FelonATURelon_WelonIGHT;
    }
    elonmbelondsImprelonssionWelonight = params.isSelontelonmbelondsImprelonssionCountParams()
        ? params.gelontelonmbelondsImprelonssionCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    elonmbelondsUrlWelonight = params.isSelontelonmbelondsUrlCountParams()
        ? params.gelontelonmbelondsUrlCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    videlonoVielonwWelonight = params.isSelontVidelonoVielonwCountParams()
        ? params.gelontVidelonoVielonwCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    quotelondCountWelonight = params.isSelontQuotelondCountParams()
        ? params.gelontQuotelondCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;

    applyBoosts = params.isApplyBoosts();

    // configurelon card valuelons
    Arrays.fill(hasCardBoosts, DelonFAULT_NO_BOOST);
    Arrays.fill(cardAuthorMatchBoosts, DelonFAULT_NO_BOOST);
    Arrays.fill(cardDomainMatchBoosts, DelonFAULT_NO_BOOST);
    Arrays.fill(cardTitlelonMatchBoosts, DelonFAULT_NO_BOOST);
    Arrays.fill(cardDelonscriptionMatchBoosts, DelonFAULT_NO_BOOST);
    if (params.isSelontCardRankingParams()) {
      for (SelonarchCardTypelon cardTypelon : SelonarchCardTypelon.valuelons()) {
        bytelon cardTypelonIndelonx = cardTypelon.gelontBytelonValuelon();
        ThriftCardRankingParams rankingParams = params.gelontCardRankingParams().gelont(cardTypelonIndelonx);
        if (rankingParams != null) {
          hasCardBoosts[cardTypelonIndelonx] = rankingParams.gelontHasCardBoost();
          cardAuthorMatchBoosts[cardTypelonIndelonx] = rankingParams.gelontAuthorMatchBoost();
          cardDomainMatchBoosts[cardTypelonIndelonx] = rankingParams.gelontDomainMatchBoost();
          cardTitlelonMatchBoosts[cardTypelonIndelonx] = rankingParams.gelontTitlelonMatchBoost();
          cardDelonscriptionMatchBoosts[cardTypelonIndelonx] = rankingParams.gelontDelonscriptionMatchBoost();
        }
      }
    }

    urlWelonight = params.isSelontUrlParams()
        ? params.gelontUrlParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    relonputationWelonight = params.isSelontRelonputationParams()
        ? params.gelontRelonputationParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    isRelonplyWelonight = params.isSelontIsRelonplyParams()
        ? params.gelontIsRelonplyParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    followRelontwelonelontWelonight = params.isSelontDirelonctFollowRelontwelonelontCountParams()
        ? params.gelontDirelonctFollowRelontwelonelontCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;
    trustelondRelontwelonelontWelonight = params.isSelontTrustelondCirclelonRelontwelonelontCountParams()
        ? params.gelontTrustelondCirclelonRelontwelonelontCountParams().gelontWelonight() : DelonFAULT_FelonATURelon_WelonIGHT;

    quelonrySpeloncificScorelonAdjustmelonnts = params.gelontQuelonrySpeloncificScorelonAdjustmelonnts();
    authorSpeloncificScorelonAdjustmelonnts = params.gelontAuthorSpeloncificScorelonAdjustmelonnts();

    // min/max filtelonrs
    telonxtScorelonMinVal = params.isSelontTelonxtScorelonParams()
        ? params.gelontTelonxtScorelonParams().gelontMin() : DelonFAULT_FelonATURelon_MIN_VAL;
    relonputationMinVal = params.isSelontRelonputationParams()
        ? params.gelontRelonputationParams().gelontMin() : DelonFAULT_FelonATURelon_MIN_VAL;
    multiplelonRelonplyMinVal = params.isSelontMultiplelonRelonplyCountParams()
        ? params.gelontMultiplelonRelonplyCountParams().gelontMin() : DelonFAULT_FelonATURelon_MIN_VAL;
    relontwelonelontMinVal = params.isSelontRelontwelonelontCountParams() && params.gelontRelontwelonelontCountParams().isSelontMin()
        ? params.gelontRelontwelonelontCountParams().gelontMin() : DelonFAULT_FelonATURelon_MIN_VAL;
    favMinVal = params.isSelontFavCountParams() && params.gelontFavCountParams().isSelontMin()
        ? params.gelontFavCountParams().gelontMin() : DelonFAULT_FelonATURelon_MIN_VAL;

    // boosts
    spamUselonrDamping = params.isSelontSpamUselonrBoost() ? params.gelontSpamUselonrBoost() : 1.0;
    nsfwUselonrDamping = params.isSelontNsfwUselonrBoost() ? params.gelontNsfwUselonrBoost() : 1.0;
    botUselonrDamping = params.isSelontBotUselonrBoost() ? params.gelontBotUselonrBoost() : 1.0;
    offelonnsivelonDamping = params.gelontOffelonnsivelonBoost();
    trustelondCirclelonBoost = params.gelontInTrustelondCirclelonBoost();
    direlonctFollowBoost = params.gelontInDirelonctFollowBoost();

    // languagelon boosts
    langelonnglishTwelonelontDelonmotelon = params.gelontLangelonnglishTwelonelontBoost();
    langelonnglishUIDelonmotelon = params.gelontLangelonnglishUIBoost();
    langDelonfaultDelonmotelon = params.gelontLangDelonfaultBoost();
    uselonUselonrLanguagelonInfo = params.isUselonUselonrLanguagelonInfo();
    unknownLanguagelonBoost = params.gelontUnknownLanguagelonBoost();

    // hit delonmotions
    elonnablelonHitDelonmotion = params.iselonnablelonHitDelonmotion();
    noTelonxtHitDelonmotion = params.gelontNoTelonxtHitDelonmotion();
    urlOnlyHitDelonmotion = params.gelontUrlOnlyHitDelonmotion();
    namelonOnlyHitDelonmotion = params.gelontNamelonOnlyHitDelonmotion();
    selonparatelonTelonxtAndNamelonHitDelonmotion = params.gelontSelonparatelonTelonxtAndNamelonHitDelonmotion();
    selonparatelonTelonxtAndUrlHitDelonmotion = params.gelontSelonparatelonTelonxtAndUrlHitDelonmotion();

    outOfNelontworkRelonplyPelonnalty = params.gelontOutOfNelontworkRelonplyPelonnalty();

    if (params.isSelontAgelonDeloncayParams()) {
      // nelonw agelon deloncay selonttings
      ThriftAgelonDeloncayRankingParams agelonDeloncayParams = params.gelontAgelonDeloncayParams();
      agelonDeloncaySlopelon = agelonDeloncayParams.gelontSlopelon();
      agelonDeloncayHalflifelon = agelonDeloncayParams.gelontHalflifelon();
      agelonDeloncayBaselon = agelonDeloncayParams.gelontBaselon();
      uselonAgelonDeloncay = truelon;
    } elonlselon if (params.isSelontDelonpreloncatelondAgelonDeloncayBaselon()
        && params.isSelontDelonpreloncatelondAgelonDeloncayHalflifelon()
        && params.isSelontDelonpreloncatelondAgelonDeloncaySlopelon()) {
      agelonDeloncaySlopelon = params.gelontDelonpreloncatelondAgelonDeloncaySlopelon();
      agelonDeloncayHalflifelon = params.gelontDelonpreloncatelondAgelonDeloncayHalflifelon();
      agelonDeloncayBaselon = params.gelontDelonpreloncatelondAgelonDeloncayBaselon();
      uselonAgelonDeloncay = truelon;
    } elonlselon {
      agelonDeloncaySlopelon = 0.0;
      agelonDeloncayHalflifelon = 0.0;
      agelonDeloncayBaselon = 0.0;
      uselonAgelonDeloncay = falselon;
    }

    // trelonnds
    twelonelontHasTrelonndBoost = params.gelontTwelonelontHasTrelonndBoost();
    multiplelonHashtagsOrTrelonndsDamping = params.gelontMultiplelonHashtagsOrTrelonndsBoost();

    // velonrifielond accounts
    twelonelontFromVelonrifielondAccountBoost = params.gelontTwelonelontFromVelonrifielondAccountBoost();
    twelonelontFromBluelonVelonrifielondAccountBoost = params.gelontTwelonelontFromBluelonVelonrifielondAccountBoost();

    // scorelon filtelonr
    minScorelon = params.gelontMinScorelon();

    applyFiltelonrsAlways = params.isApplyFiltelonrsAlways();

    uselonLucelonnelonScorelonAsBoost = params.isUselonLucelonnelonScorelonAsBoost();
    maxLucelonnelonScorelonBoost = params.gelontMaxLucelonnelonScorelonBoost();

    selonarchelonrId = selonarchQuelonry.isSelontSelonarchelonrId() ? selonarchQuelonry.gelontSelonarchelonrId() : -1;
    selonlfTwelonelontBoost = params.gelontSelonlfTwelonelontBoost();

    socialFiltelonrTypelon = selonarchQuelonry.gelontSocialFiltelonrTypelon();

    // thelon UI languagelon and thelon confidelonncelons of thelon languagelons uselonr can undelonrstand.
    if (!selonarchQuelonry.isSelontUiLang() || selonarchQuelonry.gelontUiLang().iselonmpty()) {
      uiLangId = ThriftLanguagelon.UNKNOWN.gelontValuelon();
    } elonlselon {
      uiLangId = ThriftLanguagelonUtil.gelontThriftLanguagelonOf(selonarchQuelonry.gelontUiLang()).gelontValuelon();
    }
    if (selonarchQuelonry.gelontUselonrLangsSizelon() > 0) {
      for (Map.elonntry<ThriftLanguagelon, Doublelon> lang : selonarchQuelonry.gelontUselonrLangs().elonntrySelont()) {
        ThriftLanguagelon thriftLanguagelon = lang.gelontKelony();
        // SelonARCH-13441
        if (thriftLanguagelon != null) {
          uselonrLangs[thriftLanguagelon.gelontValuelon()] = lang.gelontValuelon();
        } elonlselon {
          NULL_USelonR_LANGS_KelonY.increlonmelonnt();
        }
      }
    }

    // For now, welon will uselon thelon samelon boost for both imagelon, and videlono.
    twelonelontHasMelondiaUrlBoost = params.gelontTwelonelontHasImagelonUrlBoost();
    twelonelontHasNelonwsUrlBoost = params.gelontTwelonelontHasNelonwsUrlBoost();

    gelontInRelonplyToStatusId =
        selonarchQuelonry.isSelontRelonsultMelontadataOptions()
            && selonarchQuelonry.gelontRelonsultMelontadataOptions().isSelontGelontInRelonplyToStatusId()
            && selonarchQuelonry.gelontRelonsultMelontadataOptions().isGelontInRelonplyToStatusId();
  }
}
